# IAM_Service

./: .dockerignore  .env.ci  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  permissions_map.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_cascade_client_permissions.py  README.md
app/: main.py
app/api/routes/: auth.py  client.py  health.py  permission.py  role.py  user.py
app/config/: business_rules.json  log_schema.json  permissions_map.json
app/core/: business_config.py  config.py  enums.py  exceptions.py  logging_config.py  permissions.py  permissions_loader.py  security.py
app/db/: bootstrap.py  session.py  unit_of_work.py
app/db/interfaces/: unit_of_work.py
app/dependencies/: auth.py  services.py
app/middleware/: auth_context.py  context.py  exception_handler.py  logging.py
app/models/: client.py  client_permission.py  permission.py  refresh_token.py  role.py  role_permission.py  user.py  user_role.py
app/repositories/: auth.py  client.py  health.py  permission.py  refresh_token.py  role.py  user.py
app/repositories/interfaces/: auth.py  client.py  health.py  (+4 more)
app/schemas/: auth.py  client.py  health.py  permission.py  role.py  user.py
app/services/: auth.py  client.py  health.py  permission.py  role.py  user.py
docs/english/: docker-commands.md
docs/spanish/: README.es.md  docker-commands.md
scripts/: create_superuser.py  migrate_and_seed.py  setup_test_db.py  tools_generator.py
services/user_service/: pytest.ini  requirements.txt
tests/: conftest.py
tests/connection/: test_connection.py
tests/e2e/: test_full_user_role_permission_flow.py
tests/performance/: test_database_query_latency.py  test_password_hashing_speed.py
tests/security/: test_hash_passwords.py  test_jwt_generation_and_validation.py
tools/: iam_tools.json  iam_tools.toml  iam_tools.yaml  iam_tools_langchain.json  iam_tools_mcp.json
(+115 files in other folders)
